[package]
name = "acrars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.6.1"
rand = "0.8.5"
btleplug = "0.11.5"
tokio = { version = "1.35.1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }

